# centrifuge

./: .codecov.yml  .gitignore  .travis.yml  CLAUDE.md  Gopkg.toml  Makefile  PER_KEY_HISTORY_PLAN.md  PLAN.md  README.md  after.txt  aliases.go  api.go  api_test.go  authorization.go  authorization_jwt.go  before.txt  bench_perkey_redis_test.go  broker.go  broker_debouncing.go  broker_debouncing_test.go  broker_kafka.go  broker_kafka_test.go  broker_memory.go  broker_memory_test.go  broker_redis.go  broker_redis_test.go  broker_sharded.go  broker_snapshot_bench_test.go  broker_snapshot_engine_redis.go  broker_snapshot_test.go  changelog.md  channel.go  channel_cache.go  channel_cache_test.go  channel_layer.go  channel_layer_test.go  channel_medium.go  channel_medium_test.go  channel_namespace.go  channel_namespace_test.go  (+206 more)
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml
_examples/: go.mod  go.sum
_examples/auth_handler/: main.go  readme.md
_examples/benchmark/: main.go
_examples/cache/: index.html  main.go  readme.md
_examples/centrifugo_chat/: index.html  main.go  readme.md
_examples/chat_json/: index.html  main.go  readme.md
_examples/chat_oauth2/: Gopkg.toml  README.md  index.html  main.go
_examples/chat_protobuf/: index.html  main.go  readme.md
_examples/client_concurrency/: main.go  readme.md
_examples/compression_playground/: main.go  readme.md
_examples/concurrency/: index.html  main.go  readme.md
_examples/connecting_handler/: index.html  main.go  readme.md
_examples/credentials_resolver/: index.html  main.go
_examples/custom_broker/: index.html  main.go  readme.md
_examples/custom_broker_nats/: index.html  main.go  readme.md
_examples/custom_engine_tarantool/: index.html  main.go  readme.md
_examples/custom_token/: index.html  main.go  readme.md
_examples/custom_websocket/: index.html  main.go
_examples/custom_ws_gobwas/: index.html  main.go  pool.go  readme.md  transport.go
_examples/custom_ws_nhooyr/: index.html  main.go  readme.md
_examples/document/: index.html  main.go
_examples/document_sync/: index.html  main.go  readme.md  rtdocument.js
_examples/emulation/: index.html  main.go  readme.md
_examples/emulation_protobuf/: index.html  main.go  readme.md
_examples/experimental/: README.md
_examples/filter_cel/: index.html  main.go  main_test.go
_examples/gin_auth/: README.md  chat.html  login_form.html  main.go
_examples/history_iteration/: index.html  main.go  readme.md
_examples/history_pagination/: index.html  main.go  readme.md
_examples/jwt_token/: index.html  main.go  readme.md
_examples/keyed_demo/: docker-compose.yml  main.go
_examples/map_demo/: README.md  board.go  broker.go  docker-compose.yml  game.go  inventory.go  leader.go  leaderboard.go  main.go  poll.go  scoreboard.go  ticker.go  visualizer.go
_examples/map_presence_massive/: broker.go  main.go  presence_farm.go
_examples/native_histograms_otel/: main.go  readme.md
_examples/raw_eventsource/: index.html  main.go  readme.md
_examples/recovery_mode_cache/: index.html  main.go  readme.md
_examples/redis_benchmark/: main.go  readme.md
_examples/redis_broker_presence/: index.html  main.go  readme.md
_examples/redis_engine/: index.html  main.go  readme.md
_examples/session_handler/: index.html  main.go  readme.md
_examples/session_resolver/: index.html  main.go
_examples/shared_poll/: index.html  main.go
_examples/single_connection/: index.html  main.go  readme.md
_examples/subscribe_unsubscribe/: index.html
_examples/survey/: index.html  main.go  readme.md
_examples/tags_filter/: index.html  main.go  main_test.go  readme.md
_examples/testsuite/: main.go
_examples/unidirectional_eventsource/: main.go  readme.md
_examples/unidirectional_fetch_stream/: index.html  main.go  readme.md
_examples/unidirectional_grpc/: main.go  readme.md
_examples/unidirectional_http_stream/: main.go  readme.md
_examples/unidirectional_sse/: index.html  main.go  readme.md
_examples/unidirectional_ws/: index.html  main.go  (+1 more)
doc/: history_storage_redis.md  kafka_broker_implementation.md  kafka_broker_usage_guide.md  kafka_topic_auto_creation.md
docs/: draft_map_channel_config.md  draft_map_postgres.md  draft_map_postgres_schema.md  draft_map_recovery.md  draft_map_subscriptions.md  draft_outbox_vs_wal.md
internal/iouring-go/: BUILD.bazel  LICENSE  README.md  WORKSPACE  errors.go  eventfd.go  fixed_buffers.go  fixed_files.go  iouring.go  iouring_test.go  link_request.go  mmap.go  options.go  poller.go  prep_request.go  probe.go  request.go  timeout.go  types.go  user_data.go  utils.go
internal/iouring-go/examples/cat/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/concurrent-cat/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/cp/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/echo/: BUILD.bazel  README.md  client.go  server.go
internal/iouring-go/examples/echo-with-callback/: BUILD.bazel  README.md  server.go
internal/iouring-go/examples/hardlink/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/link/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/mkdir/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/mv/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/nvme-id-ctrl/: README.md  main.go
internal/iouring-go/examples/rm/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/symlink/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/timeout/link-with-timeout/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/timeout/request-with-timeout/: BUILD.bazel  README.md  main.go
internal/iouring-go/examples/timeout/timer/: BUILD.bazel  README.md  main.go
internal/iouring-go/syscall/: BUILD.bazel  io_uring_enter.go  io_uring_register.go  io_uring_setup.go  types.go
protocent/: decode.go  helpers.go  marshal.go  types.go
ratelimit/: README.md  config.go  example_integration.go  limiter.go  manager.go  wrapper.go
scripts/: update-deps.sh
(+322 files in other folders)
