load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "syscall",
    srcs = [
        "io_uring_enter.go",
        "io_uring_register.go",
        "io_uring_setup.go",
        "types.go",
    ],
    importpath = "github.com/iceber/iouring-go/syscall",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
