load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cat_lib",
    srcs = ["main.go"],
    importpath = "github.com/iceber/iouring-go/examples/cat",
    visibility = ["//visibility:private"],
    deps = ["//:iouring-go"],
)

go_binary(
    name = "cat",
    embed = [":cat_lib"],
    visibility = ["//visibility:public"],
)
