load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cp_lib",
    srcs = ["main.go"],
    importpath = "github.com/iceber/iouring-go/examples/cp",
    visibility = ["//visibility:private"],
    deps = ["//:iouring-go"],
)

go_binary(
    name = "cp",
    embed = [":cp_lib"],
    visibility = ["//visibility:public"],
)
