load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "echo-with-callback_lib",
    srcs = ["server.go"],
    importpath = "github.com/iceber/iouring-go/examples/echo-with-callback",
    visibility = ["//visibility:private"],
    deps = ["//:iouring-go"],
)

go_binary(
    name = "echo-with-callback",
    embed = [":echo-with-callback_lib"],
    visibility = ["//visibility:public"],
)
