load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mv_lib",
    srcs = ["main.go"],
    importpath = "github.com/iceber/iouring-go/examples/mv",
    visibility = ["//visibility:private"],
    deps = ["//:iouring-go"],
)

go_binary(
    name = "mv",
    embed = [":mv_lib"],
    visibility = ["//visibility:public"],
)
