load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "timer_lib",
    srcs = ["main.go"],
    importpath = "github.com/iceber/iouring-go/examples/timeout/timer",
    visibility = ["//visibility:private"],
    deps = ["//:iouring-go"],
)

go_binary(
    name = "timer",
    embed = [":timer_lib"],
    visibility = ["//visibility:public"],
)
